--- a/src/meson.build
+++ b/src/meson.build
@@ -44,7 +44,7 @@ pbmm2_lib = static_library(
 # executables
 ## pbmm2
 if not meson.is_subproject()
-  pbmm2_mains = executable('pbmm2', files(['main.cpp']),
+  pbmm2_main = executable('pbmm2', files(['main.cpp']),
   install : true,
   dependencies : pbmm2_lib_deps,
   include_directories : pbmm2_src_include_directories,
