Add --zmw and --hqregion

--- a/tests/cram/meson.build
+++ b/tests/cram/meson.build
@@ -4,7 +4,8 @@ pbmm2_cram_test_data = files([
   'baminput.t',
   'jsoninput.t',
   'nohpc.t',
-  'refxml.t'])
+  'refxml.t',
+  'unrolled.t'])
 
 test(
   'pbmm2_cram test',
