Add missing installed header

--- a/include/meson.build
+++ b/include/meson.build
@@ -3,6 +3,7 @@ if not meson.is_subproject()
   # pbmm2/
   install_headers(
     files([
+      'pbmm2/AlignmentMode.h',
       'pbmm2/MM2Helper.h',
       'pbmm2/MM2Settings.h']),
     subdir : 'pbmm2')
