Add rtc test, fix num sorting threads

--- a/tests/cram/meson.build
+++ b/tests/cram/meson.build
@@ -16,7 +16,8 @@ pbmm2_cram_test_data = files([
   'splitsamplejsonsorted.t',
   'splitsamplesamename.t',
   'fastxinput.t',
-  'readgroup.t'
+  'readgroup.t',
+  'rtc.t'
   ])
 
 test(
