--- a/meson.build
+++ b/meson.build
@@ -16,8 +16,8 @@ cpp = meson.get_compiler('cpp')
 foreach cflag: [
   '-Wno-missing-field-initializers',
   '-Wno-c99-extensions',
-  '-Wno-deprecated-declarations', # rely on std::tmpnam()
-  '-Werror']
+  '-Wno-deprecated-declarations' # rely on std::tmpnam()
+  ]
     if cpp.has_argument(cflag)
       pbmm2_flags += cflag
     endif
