Add formatting scripts

--- a/meson.build
+++ b/meson.build
@@ -90,6 +90,7 @@ subdir('src')
 # tests
 if not meson.is_subproject()
   if get_option('tests')
+    pbmm2_clang_formatter = find_program('tools/check-formatting')
     pbmm2_cram_script = find_program('cram', required : true)
     subdir('tests')
   endif
