--- a/tests/meson.build
+++ b/tests/meson.build
@@ -1,2 +1,9 @@
+test(
+  'pbmm2 formatting check',
+  pbmm2_clang_formatter,
+  args : [
+    '--all'],
+  workdir : meson.source_root())
+
 subdir('cram')
 subdir('unit')
