Added version info to public API

--- a/include/meson.build
+++ b/include/meson.build
@@ -5,7 +5,8 @@ if not meson.is_subproject()
     files([
       'pbmm2/AlignmentMode.h',
       'pbmm2/MM2Helper.h',
-      'pbmm2/MM2Settings.h']),
+      'pbmm2/MM2Settings.h',
+      'pbmm2/Pbmm2Version.h']),
     subdir : 'pbmm2')
 endif
 
