--- a/src/Pbmm2Version.cpp.in
+++ b/src/Pbmm2Version.cpp.in
@@ -4,9 +4,16 @@
 
 namespace PacBio {
 namespace {
-constexpr char   pbmm2Version[]    = "@PBMM2_VERSION@";
+
+constexpr char pbmm2Version[]    = "@PBMM2_VERSION@";
+constexpr char minimap2Version[] = "@MINIMAP2_VERSION@";
+
 }
 
 std::string Pbmm2Version()
 { return pbmm2Version; }
+
+std::string Minimap2Version()
+{ return minimap2Version; }
+
 } // ::PacBio
