Provide library version/dependency info.

--- a/src/meson.build
+++ b/src/meson.build
@@ -9,6 +9,8 @@ pbmm2_config.set('PBMM2_VERSION', meson.project_version())
 pbmm2_config.set('MINIMAP2_VERSION', pbmm2_minimap2_dep.version())
 
 pbmm2_version_sources = [
+
+  # old <-- to be removed
   vcs_tag(
     input : 'Pbmm2GitHash.cpp.in',
     output : 'Pbmm2GitHash.cpp',
@@ -17,7 +19,19 @@ pbmm2_version_sources = [
   configure_file(
     input : 'Pbmm2Version.cpp.in',
     output : 'Pbmm2Version.cpp',
-    configuration : pbmm2_config)]
+    configuration : pbmm2_config),
+
+  # new
+  vcs_tag(
+    input : 'LibraryGitHash.h.in',
+    output : 'LibraryGitHash.h',
+    command : ['git', 'describe', '--always', '--dirty=*'],
+    replace_string : '@PBMM2_GIT_SHA1@'),
+  configure_file(
+    input : 'LibraryVersion.h.in',
+    output : 'LibraryVersion.h',
+    configuration : pbmm2_config),
+]
 
 pbmm2_lib_cpp_sources = files(['MM2Helper.cpp'])
 pbmm2_lib_cpp_sources += pbmm2_version_sources
@@ -48,6 +62,7 @@ pbmm2_cpp_sources = files([
   'IndexSettings.cpp',
   'IndexWorkflow.cpp',
   'InputOutputUX.cpp',
+  'LibraryInfo.cpp',
   'SampleNames.cpp',
   'StreamWriters.cpp',
   'Timer.cpp'])
