--- a/include/meson.build
+++ b/include/meson.build
@@ -4,6 +4,7 @@ if not meson.is_subproject()
   install_headers(
     files([
       'pbmm2/AlignmentMode.h',
+      'pbmm2/LibraryInfo.h',
       'pbmm2/MM2Helper.h',
       'pbmm2/MM2Settings.h',
       'pbmm2/Pbmm2Version.h']),
