Include Boost with `-isystem`

--- a/meson.build
+++ b/meson.build
@@ -8,7 +8,7 @@ project(
     'cpp_std=c++14',
     'c_std=gnu11'],
   license : 'BSD-3',
-  meson_version : '>= 0.46.0')
+  meson_version : '>= 0.52.0')
 
 # CXXFLAGS
 pbmm2_flags = []
@@ -55,7 +55,7 @@ endif
 pbmm2_thread_dep = dependency('threads', required : true)
 
 ## boost
-pbmm2_boost_dep = dependency('boost', required : true)
+pbmm2_boost_dep = dependency('boost', include_type : 'system', required : true)
 
 ## zlib
 pbmm2_zlib_dep = dependency('zlib', required : true, fallback : ['zlib', 'zlib_dep'])
