[BFX-12] Strip hifi kinetic tags

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -112,6 +112,7 @@ pbmm2_cram_test = [
   'splitsamplesamename',
   'splitsamplesorted',
   'strip',
+  'strip_hifi',
   'unaligned',
   'unrolled',
   ]
