[BFX-535] Add cram

--- a/meson.build
+++ b/meson.build
@@ -98,7 +98,7 @@ subdir('src')
 if not meson.is_subproject()
   if get_option('tests')
     pbmm2_clang_formatter = find_program('tools/check-formatting')
-    pbmm2_cram_script = find_program('cram')
+    pbmm2_cram_script = find_program('scripts/cram')
     subdir('tests')
   endif
 endif
