[BFX-534] Update cram tests for mm2.26

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -38,7 +38,7 @@ pbmm2_cram_test = [
   'baminput_28',
   'baminput_29',
   'baminput_30',
-  # 'best_n',
+  'best_n',
   'biosampleConsensus_1',
   'biosampleConsensus_2',
   'biosampleConsensus_3',
@@ -105,7 +105,7 @@ pbmm2_cram_test = [
   'rc_ubam_ml',
   'readgroup',
   'refxml',
-  # 'rmt',
+  'rmt',
   'sa_1',
   'sa_2',
   'splitsample',
